tests/tooling/fixtures/native/recovery/negative/negative_do_while_parser_missing_rparen.objc3
// Expected diagnostic code(s): O3P109.
module NegativeDoWhileParserMissingRParen;

fn main() -> i32 {
  do {
    let i = 1;
  } while (i < 3;
  return 0;
}

